stage03/authentik/manifests/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-server
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/component: server
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authentik
            app.kubernetes.io/instance: authentik
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
            - port: "9443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-db
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: authentik-db
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authentik
            app.kubernetes.io/instance: authentik
        - matchLabels:
            cnpg.io/cluster: authentik-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
            app.kubernetes.io/name: cloudnative-pg
            app.kubernetes.io/instance: cnpg
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "5432"
              protocol: TCP
